--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
-		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.js"></script>
-
+		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
 
 		<script type="text/javascript" src="js/services.js"></script>
 		<script type="text/javascript" src="js/controllers.js"></script>
