--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 
+		<script type="text/javascript">
+			// Object.values shim
+			Object.values = function(o) {
+				return Object.keys(o).map(function(k) { return o[k]; });
+			}
+
+		</script>
+
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
