Continue implementing reporting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 
 		<script type="text/javascript">
@@ -23,6 +24,8 @@
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
 		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
 		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
 
 		<script type="text/javascript" src="js/services.js"></script>
 		<script type="text/javascript" src="js/controllers.js"></script>
