--- a/index.html
+++ b/index.html
@@ -33,38 +33,28 @@
 	</head>
 	<body ng-app="MonitoolApp">
 
-		<div class="container">
-
-			<div class="row">
-				<div class="col-md-12">
-
-					<nav class="navbar navbar-inverse" role="navigation">
-						<div class="container-fluid">
-							<div class="navbar-header">
-								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-								<a class="navbar-brand" href="#">Monitool</a>
-							</div>
-
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<ul class="nav navbar-nav" ng-controller="MenuController">
-
-									<li ng-repeat="route in routes" ng-class="{active: !isSelected(route)}">
-										<a href="{{route.path}}">{{route.name}}</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</nav>
-					
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<!-- <div class="container-fluid"> -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 				</div>
-			</div>
 
-			<div ng-view></div>
-		</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav" ng-controller="MenuController">
+
+						<li ng-repeat="route in routes" ng-class="{active: !isSelected(route)}">
+							<a href="{{route.path}}">{{route.name}}</a>
+						</li>
+					</ul>
+				</div>
+			<!-- </div> -->
+		</nav>
+
+		<div class="container-fluid" ng-view style="padding-top: 70px;"></div>
 	</body>
 </html>
