--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Monitool</title>
 		<meta charset="UTF-8">
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
