--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 						<li ng-class="{active: currentPage == 'sync'}">
 							<a ng-click="changePage('sync')">Synchronisation</a>
 						</li>
+						<li ng-class="{active: currentPage == 'help'}">
+							<a ng-click="changePage('help')">Aide</a>
+						</li>
 					</ul>
 				</div>
 			<!-- </div> -->
