--- a/index.html
+++ b/index.html
@@ -13,20 +13,13 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/nvd3/nv.d3.min.css"/>
 
-		<script type="text/javascript">
-			// Object.values shim
-			Object.values = function(o) {
-				return Object.keys(o).map(function(k) { return o[k]; });
-			}
-
-		</script>
-
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
 		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+		<script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
 		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
@@ -44,7 +37,6 @@
 		<script type="text/javascript" src="js/directives.js"></script>
 	</head>
 	<body>
-
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="MenuController">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -69,18 +61,20 @@
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="fa fa-circle" style="color: green"></i>
-								Mode connecté
+								{{status}}
 								<span class="caret"></span>
 							</a>
 
 							<ul class="dropdown-menu" role="menu">
 								<li>
-									<a href="#">
-										<i class="fa fa-circle" style="color: red"></i>
+									<a href="#" ng-click="firstSync()">
+										Lancer la première synchro
+									</a>
+								</li>
+								<li>
+									<a href="#" ng-click="goOffline()">
 										Passer en mode déconnecté
 									</a>
 								</li>
