--- a/index.html
+++ b/index.html
@@ -11,30 +11,45 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
-		<link rel="stylesheet" type="text/css" href="bower_components/nvd3/nv.d3.min.css"/>
+		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 
+		<!-- Basic functionalities (dates, maths, fsm) -->
+		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
+		<script type="text/javascript" src="bower_components/javascript-state-machine/state-machine.min.js"></script>
+
+		<!-- PNG generation -->
+		<script type="text/javascript" src="bower_components/Blob.js/Blob.js"></script>
+		<script type="text/javascript" src="bower_components/canvas-toBlob.js/canvas-toBlob.js"></script>
+		<script type="text/javascript" src="bower_components/FileSaver.js/FileSaver.min.js"></script>
+	
+		<!-- Bootstrap -->
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+		<!-- Angular -->
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
-		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
-		<script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
-		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap-show-errors/src/showErrors.min.js"></script>
-		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-		<script type="text/javascript" src="bower_components/javascript-state-machine/state-machine.min.js"></script>
+		
+		<!-- Pouch -->
+		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+		<script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
+
+		<!-- Graphs -->
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-		<script type="text/javascript" src="bower_components/nvd3/nv.d3.min.js"></script>
-		<script type="text/javascript" src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.min.js"></script>
+		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
+		
 
 		<script type="text/javascript" src="js/services.js"></script>
 		<script type="text/javascript" src="js/controllers.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/directives.js"></script>
+		<script type="text/javascript" src="js/image-exporter.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="MenuController">
