--- a/dev/index.html
+++ b/dev/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<!-- <html manifest="monitool.appcache"> -->
- 	<head>
+	<head>
 		<title>Monitool</title>
-		<meta charset="UTF-8">
 
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 
@@ -52,54 +51,7 @@
 		<script type="text/javascript" src="js/image-exporter.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="MenuController">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li ng-class="{active: currentPage == 'projects'}">
-							<a ng-click="changePage('projects')">Projets</a>
-						</li>
-						<li ng-class="{active: currentPage == 'indicators'}">
-							<a ng-click="changePage('indicators')">Catalogue Indicateurs</a>
-						</li>
-						<li ng-class="{active: currentPage == 'help'}">
-							<a ng-click="changePage('help')">Aide</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								{{status}}
-								<span class="caret"></span>
-							</a>
-
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="#" ng-click="firstSync()">
-										Lancer la première synchro
-									</a>
-								</li>
-								<li>
-									<a href="#" ng-click="goOffline()">
-										Passer en mode déconnecté
-									</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
+		<div ng-include="'partials/home.html'"></div>
 		<div class="container-fluid" ng-view style="padding-top: 70px;"></div>
 	</body>
 </html>
