Continue implementing build scripts

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,6 +12,10 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 
+		<script type="text/javascript">
+			var LOCAL_DB = 'monitool', REMOTE_DB = 'http://localhost:5984/monitool';
+		</script>
+
 		<!-- Basic functionalities (dates, maths, fsm) -->
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
