Fix some of the links to make it all work without hashes

--- a/dev/index.html
+++ b/dev/index.html
@@ -55,7 +55,7 @@
 		<script type="text/javascript" src="js/image-exporter.js"></script>
 	</head>
 	<body>
-		<div ng-include="'partials/home.html'"></div>
+		<div ng-include="'/partials/home.html'"></div>
 		<div class="container-fluid" ng-view style="padding-top: 70px;"></div>
 	</body>
 </html>
