--- a/dev/index.html
+++ b/dev/index.html
@@ -13,8 +13,15 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 
 		<script type="text/javascript">
-			var LOCAL_DB = 'monitool', REMOTE_DB = 'http://localhost:5984/monitool';
+			// global configuration
+			var LOCAL_DB = 'monitool';
+			var REMOTE_DB = 'http://localhost:5984/monitool';
 		</script>
+
+		<script type="text/javascript" src="i18n/fr.js"></script>
+		<script type="text/javascript" src="i18n/es.js"></script>
+		<script type="text/javascript" src="i18n/en.js"></script>
+
 
 		<!-- Basic functionalities (dates, maths, fsm) -->
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
@@ -34,6 +41,7 @@
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
+		<script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
