Change routing library (from angular-router to angular-ui-router)

--- a/dev/index-prod.html
+++ b/dev/index-prod.html
@@ -10,8 +10,5 @@
 
 		<script type="text/javascript" src="js/monitool.js"></script>
 	</head>
-	<body>
-		<div ng-include="'partials/home.html'"></div>
-		<div class="container-fluid" ng-view style="padding-top: 70px;"></div>
-	</body>
+	<body ui-view></body>
 </html>
