--- a/dev/index.html
+++ b/dev/index.html
@@ -32,14 +32,11 @@
 		<script type="text/javascript" src="bower_components/Blob.js/Blob.js"></script>
 		<script type="text/javascript" src="bower_components/canvas-toBlob.js/canvas-toBlob.js"></script>
 		<script type="text/javascript" src="bower_components/FileSaver.js/FileSaver.min.js"></script>
-	
-		<!-- Bootstrap -->
-		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 		<!-- Angular -->
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+
 		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -69,9 +66,7 @@
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</head>
-	<body>
-		<div ng-include="'partials/home.html'"></div>
-		<div class="container-fluid" ng-view style="padding-top: 70px;"></div>
+	<body ui-view>
 	</body>
 </html>
 
