* Begin change password and userlist implementation * Add more icons

--- a/dev/index.html
+++ b/dev/index.html
@@ -61,6 +61,7 @@
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/directives.js"></script>
+		<script type="text/javascript" src="js/filters.js"></script>
 		<script type="text/javascript" src="js/controllers/project.js"></script>
 		<script type="text/javascript" src="js/controllers/indicator.js"></script>
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
