--- a/dev/index.html
+++ b/dev/index.html
@@ -56,11 +56,12 @@
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
 		
 
-		<script type="text/javascript" src="js/image-exporter.js"></script>
 		<script type="text/javascript" src="js/services/database.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
-		<script type="text/javascript" src="js/directives.js"></script>
+		<script type="text/javascript" src="js/directives/file-export.js"></script>
+		<script type="text/javascript" src="js/directives/forms.js"></script>
+		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/filters.js"></script>
 		<script type="text/javascript" src="js/controllers/project.js"></script>
 		<script type="text/javascript" src="js/controllers/indicator.js"></script>
