Change indicator selection mechanism

--- a/dev/index.html
+++ b/dev/index.html
@@ -59,6 +59,7 @@
 		<script type="text/javascript" src="js/services/database.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
+		<script type="text/javascript" src="js/directives/indicator-select.js"></script>
 		<script type="text/javascript" src="js/directives/file-export.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
