Fix: indicators with no theme/type where not appearing in indicator tree. Fix: change indicator edition reset button color. Fix: Remove "delete" button from indicator edition (will return when implemented properly)

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,8 +14,7 @@
 
 		<script type="text/javascript">
 			// global configuration
-			var LOCAL_DB = 'monitool';
-			var REMOTE_DB = 'http://localhost:5984/monitool';
+			var REMOTE_DB = 'http://localhost:5984/monitool_other';
 		</script>
 
 		<script type="text/javascript" src="i18n/fr.js"></script>
