Add tooltip to explain green and yellow circles for core indicators. Allow to detach indicators from logical frame, to handle deleting purposes, results, ...

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
 
 		<script type="text/javascript">
 			// global configuration
-			var REMOTE_DB = 'http://localhost:5984/monitool_other';
+			var REMOTE_DB = 'http://localhost:5984/monitool';
 		</script>
 
 		<script type="text/javascript" src="i18n/fr.js"></script>
