Implement forms, data input and data aggregation almost from scratch Start implementing "by day" reporting which should not be very complicated now.

--- a/dev/index.html
+++ b/dev/index.html
@@ -55,6 +55,7 @@
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
 		
 
+		<script type="text/javascript" src="js/polyfills.js"></script>
 		<script type="text/javascript" src="js/services/database.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
