--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -6,11 +6,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/app.css" />
+		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
+		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/app.css" />
 
 		<script type="text/javascript">
 		
@@ -74,7 +74,8 @@
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</head>
-	<body ui-view>
+	<body>
+		<div ui-view></div>
 	</body>
 </html>
 
