--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -69,6 +69,7 @@
 		<script type="text/javascript" src="js/directives/forms.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/filters.js"></script>
+		<script type="text/javascript" src="js/controllers/admin.js"></script>
 		<script type="text/javascript" src="js/controllers/project.js"></script>
 		<script type="text/javascript" src="js/controllers/indicator.js"></script>
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
