Remove diacritics on search to allow matching french/spanish indicator names.

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -64,6 +64,7 @@
 		<script type="text/javascript" src="js/polyfills.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
+		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/directives/file-export.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
