start implementing reports

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
+		<link rel='stylesheet' type="text/css" href='bower_components/textAngular/src/textAngular.css'>
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 
 		<script type="text/javascript">
@@ -59,7 +60,10 @@
 		<!-- Graphs -->
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
-		
+
+		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
+		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
+		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>		
 
 		<script type="text/javascript" src="js/polyfills.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
