Implement cleaner reporting  on projects.

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -69,7 +69,7 @@
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
-		<script type="text/javascript" src="js/directives/file-export.js"></script>
+		<script type="text/javascript" src="js/directives/reporting.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/filters.js"></script>
