Remove mathjs dependency. The footprint was too much for the limited purpose.

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -30,8 +30,8 @@
 
 		<!-- Basic functionalities (dates, maths, fsm) -->
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-		<script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script>
-		<script type="text/javascript" src="bower_components/javascript-state-machine/state-machine.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script> -->
+		<!-- <script type="text/javascript" src="bower_components/javascript-state-machine/state-machine.min.js"></script> -->
 
 		<!-- PNG generation -->
 		<script type="text/javascript" src="bower_components/Blob.js/Blob.js"></script>
@@ -42,7 +42,7 @@
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-		<script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script> -->
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
@@ -55,7 +55,7 @@
 		
 		<!-- Pouch -->
 		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
-		<script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script> -->
 
 		<!-- Graphs -->
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
