--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -54,7 +54,7 @@
 		<script type="text/javascript" src="bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
 		
 		<!-- Pouch -->
-		<script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script> -->
 		<!-- <script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script> -->
 
 		<!-- Graphs -->
