--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -69,9 +69,10 @@
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
-		<script type="text/javascript" src="js/directives/reporting.js"></script>
-		<script type="text/javascript" src="js/directives/forms.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
+		<script type="text/javascript" src="js/directives/forms.js"></script>
+		<script type="text/javascript" src="js/directives/indicator.js"></script>
+		<script type="text/javascript" src="js/directives/reporting.js"></script>
 		<script type="text/javascript" src="js/filters.js"></script>
 		<script type="text/javascript" src="js/controllers/admin.js"></script>
 		<script type="text/javascript" src="js/controllers/project.js"></script>
