Diferenciate raw project data with indicators. This will allow not creating so many single use indicators (which is boring and counter-productive)

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -68,10 +68,13 @@
 		<script type="text/javascript" src="js/polyfills.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
+		<script type="text/javascript" src="js/services/reporting-compute-helper.js"></script>
+		<script type="text/javascript" src="js/services/reporting-regroup-helper.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
-		<script type="text/javascript" src="js/directives/indicator.js"></script>
+		<script type="text/javascript" src="js/directives/project-form.js"></script>
+		<script type="text/javascript" src="js/directives/project-input.js"></script>
 		<script type="text/javascript" src="js/directives/reporting.js"></script>
 		<script type="text/javascript" src="js/filters.js"></script>
 		<script type="text/javascript" src="js/controllers/admin.js"></script>
