Remove dead code Remove french strings from partials Implement form reporting

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -70,6 +70,7 @@
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/reporting-compute-helper.js"></script>
 		<script type="text/javascript" src="js/services/reporting-regroup-helper.js"></script>
+		<script type="text/javascript" src="js/services/reporting-raw-helper.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
