Make logframe printable

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -74,6 +74,7 @@
 		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
+		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
 		<script type="text/javascript" src="js/directives/project-form.js"></script>
 		<script type="text/javascript" src="js/directives/project-input.js"></script>
 		<script type="text/javascript" src="js/directives/reporting.js"></script>
