Update to angular 1.3. We use a snapshot from uibootstrap waiting for the compatible version.

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css" />
-		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css-only/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
 		<link rel='stylesheet' type="text/css" href='bower_components/textAngular/src/textAngular.css'>
@@ -30,8 +30,6 @@
 
 		<!-- Basic functionalities (dates, maths, fsm) -->
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-		<!-- <script type="text/javascript" src="bower_components/mathjs/dist/math.min.js"></script> -->
-		<!-- <script type="text/javascript" src="bower_components/javascript-state-machine/state-machine.min.js"></script> -->
 
 		<!-- PNG generation -->
 		<script type="text/javascript" src="bower_components/Blob.js/Blob.js"></script>
@@ -41,10 +39,11 @@
 		<!-- Angular -->
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-		<!-- <script type="text/javascript" src="bower_components/angular-pouchdb/angular-pouchdb.js"></script> -->
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
+		<script type="text/javascript" src="js/ui-bootstrap-tpls-0.13.0-SNAPSHOT.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
+		
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap-show-errors/src/showErrors.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.min.js"></script>
@@ -52,10 +51,6 @@
 		<script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
-		
-		<!-- Pouch -->
-		<!-- <script type="text/javascript" src="bower_components/pouchdb/dist/pouchdb.min.js"></script> -->
-		<!-- <script type="text/javascript" src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.min.js"></script> -->
 
 		<!-- Graphs -->
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
