Fix database transition, and rename js and css files to kill user's cache.

--- a/client/dev/index-prod.html
+++ b/client/dev/index-prod.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 	<body>
-		<link rel="stylesheet" type="text/css" href="monitool.css" />
-		<script type="text/javascript" src="monitool.js"></script>
+		<link rel="stylesheet" type="text/css" href="monitool2.css" />
+		<script type="text/javascript" src="monitool2.js"></script>
 		<div ui-view></div>
 	</body>
 </html>
