Override angular ui bootstrap template to prevent using glyphicons

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -42,6 +42,7 @@
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 
 		<script type="text/javascript" src="js/ui-bootstrap-tpls-0.13.0-SNAPSHOT.min.js"></script>
+		<script type="text/javascript" src="js/ui-bootstrap-override.min.js"></script>
 		<!-- <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
 		
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
