rename ui bootstrap file.

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -41,8 +41,7 @@
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 
-		<script type="text/javascript" src="js/ui-bootstrap-tpls-0.13.0-SNAPSHOT.min.js"></script>
-		<script type="text/javascript" src="js/ui-bootstrap-override.min.js"></script>
+		<script type="text/javascript" src="js/ui-bootstrap-tpls.js"></script>
 		<!-- <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
 		
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
@@ -59,13 +58,11 @@
 
 		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
 		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
-		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>		
+		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>
 
 		<script type="text/javascript" src="js/polyfills.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
-		<script type="text/javascript" src="js/services/reporting-compute-helper.js"></script>
-		<script type="text/javascript" src="js/services/reporting-regroup-helper.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/directives/acls.js"></script>
 		<script type="text/javascript" src="js/directives/forms.js"></script>
