--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -40,10 +40,6 @@
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-
-		<script type="text/javascript" src="js/ui-bootstrap-tpls.js"></script>
-		<!-- <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
-		
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap-show-errors/src/showErrors.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.min.js"></script>
@@ -60,22 +56,26 @@
 		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
 		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>
 
+		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/controllers/project.js"></script>
+		<script type="text/javascript" src="js/controllers/indicator.js"></script>
+		<script type="text/javascript" src="js/controllers/admin.js"></script>
+		<script type="text/javascript" src="js/controllers/helper.js"></script>
+		<script type="text/javascript" src="js/directives/_shared.js"></script>
+		<script type="text/javascript" src="js/directives/indicator.js"></script>
+		<script type="text/javascript" src="js/directives/project-planning.js"></script>
+		<script type="text/javascript" src="js/directives/project-input.js"></script>
+		<script type="text/javascript" src="js/directives/reporting.js"></script>
+		<script type="text/javascript" src="js/directives/_forms.js"></script>
+		<script type="text/javascript" src="js/directives/_acls.js"></script>
+		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
 		<script type="text/javascript" src="js/polyfills.js"></script>
+		<script type="text/javascript" src="js/ui-bootstrap-tpls.js"></script>
+		<script type="text/javascript" src="js/filters/indicator.js"></script>
+		<script type="text/javascript" src="js/filters/shared.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
-		<script type="text/javascript" src="js/directives/acls.js"></script>
-		<script type="text/javascript" src="js/directives/forms.js"></script>
-		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
-		<script type="text/javascript" src="js/directives/project-form.js"></script>
-		<script type="text/javascript" src="js/directives/project-input.js"></script>
-		<script type="text/javascript" src="js/directives/reporting.js"></script>
-		<script type="text/javascript" src="js/filters.js"></script>
-		<script type="text/javascript" src="js/controllers/admin.js"></script>
-		<script type="text/javascript" src="js/controllers/project.js"></script>
-		<script type="text/javascript" src="js/controllers/indicator.js"></script>
-		<script type="text/javascript" src="js/controllers/helper.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
 	</head>
 	<body>
 		<div ui-view></div>
