--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -75,6 +75,7 @@
 		<script type="text/javascript" src="js/filters/shared.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/input.js"></script>
+		<script type="text/javascript" src="js/services/itertools.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
 	</head>
