--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -57,7 +57,11 @@
 		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>
 
 		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/controllers/project.js"></script>
+		<script type="text/javascript" src="js/controllers/project-shared.js"></script>
+		<script type="text/javascript" src="js/controllers/project-activity.js"></script>
+		<script type="text/javascript" src="js/controllers/project-spec.js"></script>
+		<script type="text/javascript" src="js/controllers/project-indicators.js"></script>
+
 		<script type="text/javascript" src="js/controllers/indicator.js"></script>
 		<script type="text/javascript" src="js/controllers/admin.js"></script>
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
