update ui bootstrap / fix build

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -74,7 +74,7 @@
 		<script type="text/javascript" src="js/directives/_acls.js"></script>
 		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
 		<script type="text/javascript" src="js/polyfills.js"></script>
-		<script type="text/javascript" src="js/ui-bootstrap-tpls.js"></script>
+		<script type="text/javascript" src="js/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
