--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -52,9 +52,9 @@
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
 
-		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
-		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
-		<script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>
+		<script type="text/javascript" src="bower_components/textAngular/dist/textAngular-rangy.min.js"></script>
+		<script type="text/javascript" src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
+		<script type="text/javascript" src="bower_components/textAngular/dist/textAngular.min.js"></script>
 
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/project-shared.js"></script>
