Finish implementing pivot tables

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -82,6 +82,7 @@
 		<script type="text/javascript" src="js/services/itertools.js"></script>
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
+		<script type="text/javascript" src="js/services/olap.js"></script>
 	</head>
 	<body>
 		<div ui-view></div>
