--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -77,6 +77,7 @@
 		<script type="text/javascript" src="js/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
+		<script type="text/javascript" src="js/services/translate.js"></script>
 		<script type="text/javascript" src="js/services/fetch.js"></script>
 		<script type="text/javascript" src="js/services/input.js"></script>
 		<script type="text/javascript" src="js/services/itertools.js"></script>
