--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -53,7 +53,7 @@
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
 
 		<!-- <script type="text/javascript" src="bower_components/textAngular/dist/textAngular-rangy.min.js"></script> -->
-		<!-- <script type="text/javascript" src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script> -->
+		<script type="text/javascript" src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
 		<!-- <script type="text/javascript" src="bower_components/textAngular/dist/textAngular.min.js"></script> -->
 
 		<script type="text/javascript" src="js/app.js"></script>
