Rewrite all data input (list + forms)

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css-only/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
-		<link rel='stylesheet' type="text/css" href='bower_components/textAngular/src/textAngular.css'>
+		<!-- <link rel='stylesheet' type="text/css" href='bower_components/textAngular/src/textAngular.css'> -->
+		<link rel="stylesheet" type="text/css" href="bower_components/handsontable/dist/handsontable.full.css" />
+
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 
 		<script type="text/javascript">
@@ -26,7 +28,6 @@
 		<script type="text/javascript" src="i18n/fr.js"></script>
 		<script type="text/javascript" src="i18n/es.js"></script>
 		<script type="text/javascript" src="i18n/en.js"></script>
-
 
 		<!-- Basic functionalities (dates, maths, fsm) -->
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
@@ -56,6 +57,9 @@
 		<script type="text/javascript" src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
 		<!-- <script type="text/javascript" src="bower_components/textAngular/dist/textAngular.min.js"></script> -->
 
+		<script type="text/javascript" src="bower_components/handsontable/dist/handsontable.full.min.js"></script>
+		<script type="text/javascript" src="bower_components/ngHandsontable/dist/ngHandsontable.min.js"></script>
+
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/project-shared.js"></script>
 		<script type="text/javascript" src="js/controllers/project-activity.js"></script>
@@ -74,7 +78,9 @@
 		<script type="text/javascript" src="js/directives/_acls.js"></script>
 		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
 		<script type="text/javascript" src="js/polyfills.js"></script>
+
 		<script type="text/javascript" src="js/ui-bootstrap-tpls.min.js"></script>
+
 		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
 		<script type="text/javascript" src="js/services/translate.js"></script>
